trunk/Archive2/fb/2e1082c27aa78d/output
main.cpp:3:1: error: stray '\' in program
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
 ^
main.cpp:3:19: error: too many decimal points in number
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
                   ^
main.cpp:1:1: error: 'touch' does not name a type
 touch {A..Z}
 ^
main.cpp:3:1: error: expected unqualified-id before 'for'
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
 ^
main.cpp:3:26: error: expected unqualified-id before 'do'
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
                          ^
main.cpp:3:44: error: 'read' does not name a type
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
                                            ^
main.cpp:3:82: error: 'mv' does not name a type
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
                                                                                  ^
main.cpp:3:112: error: 'done' does not name a type
 for a in Folder\ {1..8}; do mkdir -p "$a"; read z && read y && read x && read w; mv "$z" "$y" "$x" "$w" "$a/"; done < <(ls ?)
                                                                                                                ^
